# garth-mcp-server

./: Makefile  README.md  pyproject.toml
.claude/: settings.local.json
src/garth_mcp_server/: __init__.py  utils.py
tests/: conftest.py  test_server.py
tests/cassettes/: test_activity_related_tools.yaml  test_daily_body_battery.yaml  test_daily_hrv.yaml  test_daily_hydration.yaml  test_daily_intensity_minutes.yaml  test_daily_sleep.yaml  test_daily_steps.yaml  test_daily_stress.yaml  test_get_activities.yaml  test_get_activities_by_date.yaml  test_get_blood_pressure.yaml  test_get_body_composition.yaml  test_get_connectapi_endpoint.yaml  test_get_device_settings.yaml  test_get_devices.yaml  test_get_gear.yaml  test_get_respiration_data.yaml  test_get_spo2_data.yaml  test_hrv_data.yaml  test_monthly_activity_summary.yaml  test_nightly_sleep.yaml  test_snapshot.yaml  test_user_profile.yaml  test_user_profile_statistics.yaml  test_user_settings.yaml  test_weekly_intensity_minutes.yaml  test_weekly_steps.yaml  test_weekly_stress.yaml
