[project]
name = "garth-mcp-server"
dynamic = ["version"]
description = "Garmin Connect MCP server"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Matin Tamizi", email = "mtamizi@duck.com"},
]
dependencies = [
    "garth>=0.5.19,<1.0.0",
    "fastmcp>=2.13",
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
keywords = ["garmin", "garmin connect", "mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/garth_mcp_server/__init__.py"

[project.scripts]
garth-mcp-server = "garth_mcp_server:main"

[dependency-groups]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-vcr",
    "pytest-anyio",
]
dev = [
    "ipython",
    "ipdb",
    "ipykernel",
    "mcp[cli]",
    "pytest-anyio>=0.0.0",
    "pre-commit>=4.3.0",
]
linting = [
    "ruff",
    "mypy",
    "types-requests",
]
